<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feeds"
        android:icon="@drawable/ic_view_feed"
        android:title="@string/feed_title" />

    <item
        android:id="@+id/navigation_forms"
        android:icon="@drawable/ic_form"
        android:title="@string/form_title" />

    <item
        android:id="@+id/navigation_checklists"
        android:icon="@drawable/ic_checklist"
        android:title="@string/checklist_title" />

    <item
        android:id="@+id/navigation_lessons"
        android:icon="@drawable/ic_local_library"
        android:title="@string/lesson_title" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_box"
        android:title="@string/account_title" />

</menu>
